force-app/main/default/objects/Property_Buyer__c/Property_Buyer__c.object-meta.xml
<CustomObject>
    <description>Booking junction between a property and a buyer.</description>
    <label>Property Buyer</label>
    <nameField><displayFormat>BOOK-{00000}</displayFormat><label>Buyer #</label><type>AutoNumber</type></nameField>
    <pluralLabel>Property Buyers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>