force-app/main/default/objects/Property_Buyer__c/fields/Appointment_Date_Time__c.field-meta.xml
<CustomField><fullName>Appointment_Date_Time__c</fullName><description>Requested appointment date/time for a property visit.</description><inlineHelpText>Used by the booking workflow and reminders.</inlineHelpText><label>Appointment Date/Time</label><required>false</required><trackHistory>true</trackHistory><type>DateTime</type></CustomField>