force-app/main/default/objects/Property_Buyer__c/fields/Buyer__c.field-meta.xml
<CustomField><fullName>Buyer__c</fullName><description>Buyer who requested the booking.</description><inlineHelpText>Buyer must include name, email, and phone.</inlineHelpText><label>Buyer</label><referenceTo>Buyer__c</referenceTo><relationshipLabel>Property Bookings</relationshipLabel><relationshipName>Property_Bookings</relationshipName><reparentableMasterDetail>true</reparentableMasterDetail><trackHistory>true</trackHistory><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>