force-app/main/default/objects/Property_Buyer__c/fields/Notes__c.field-meta.xml
<CustomField><fullName>Notes__c</fullName><description>Buyer notes from the public booking form.</description><inlineHelpText>Optional notes from the buyer.</inlineHelpText><label>Notes</label><length>32768</length><required>false</required><type>LongTextArea</type><visibleLines>3</visibleLines></CustomField>