force-app/main/default/objects/Property_Buyer__c/fields/Property__c.field-meta.xml
<CustomField><fullName>Property__c</fullName><description>Property requested by the buyer.</description><inlineHelpText>Select the property for this booking request.</inlineHelpText><label>Property</label><referenceTo>Property__c</referenceTo><relationshipLabel>Buyer Bookings</relationshipLabel><relationshipName>Buyer_Bookings</relationshipName><reparentableMasterDetail>true</reparentableMasterDetail><trackHistory>true</trackHistory><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>