force-app/main/default/objects/Property_Buyer__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><description>Booking request status.</description><inlineHelpText>Track booking from new request to completion.</inlineHelpText><label>Status</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>New</fullName><default>true</default><label>New</label></value><value><fullName>Confirmed</fullName><default>false</default><label>Confirmed</label></value><value><fullName>Completed</fullName><default>false</default><label>Completed</label></value><value><fullName>Canceled</fullName><default>false</default><label>Canceled</label></value></valueSetDefinition></valueSet></CustomField>