force-app/main/default/objects/Property_Buyer__c/validationRules/Appointment_Not_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_Not_In_Past</fullName>
    <active>true</active>
    <description>Appointment requests cannot be scheduled in the past.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Appointment_Date_Time__c)), Appointment_Date_Time__c &lt; NOW())</errorConditionFormula>
    <errorMessage>Appointment Date/Time cannot be in the past.</errorMessage>
</ValidationRule>